fixed bug on mobile for the mobile header and scrolling issues

--- a/storefront-child/build_assets/scss/blocks/_header.scss
+++ b/storefront-child/build_assets/scss/blocks/_header.scss
@@ -31,8 +31,8 @@
         }
 
         &__scrollable {
-            overflow: auto;
-            height: fit-content;
+            overflow-y: auto;
+            height: calc(100vh - 196px);
         }
 
         ul {
