--- a/storefront-child/build_assets/scss/style.scss
+++ b/storefront-child/build_assets/scss/style.scss
@@ -64,10 +64,14 @@ a {
     }
 }
 
-body{
+body {
     &.modal-open {
         overflow: hidden;
     }
+}
+
+.site {
+    overflow-x: initial;
 }
 
 
